<resources>
    <string name="app_name">KMNL</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="table_name_column_title">Team</string>
    <string name="table_played_column_title">P</string>
    <string name="table_won_column_title">W</string>
    <string name="table_draw_column_title">D</string>
    <string name="table_lost_column_title">L</string>
    <string name="table_goals_column_title">Goals</string>
    <string name="table_points_column_title">PTS</string>
    <string name="top_scorers">Top players</string>
    <string name="first_league">1. KMNL</string>

    <string name="main_drawer_other">Ostalo</string>
    <string name="main_drawer_share">Share</string>
    <string name="main_drawer_send">Send</string>
    <string name="main_drawer_first_league">1. liga</string>
    <string name="main_drawer_title">Katolička malonogometna liga</string>
    <string name="item_position_empty">#</string>

</resources>
