<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:orientation="horizontal"
    android:weightSum="13">

    <TextView
        android:id="@+id/position"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="#"
        android:textSize="@dimen/table_teams_text_size" />

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="5"
        android:text="@string/table_name_column_title"
        android:textSize="@dimen/table_teams_text_size" />

    <TextView
        android:id="@+id/games"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/table_played_column_title"
        android:textSize="@dimen/table_teams_text_size" />

    <TextView
        android:id="@+id/wins"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/table_won_column_title"
        android:textSize="@dimen/table_teams_text_size" />

    <TextView
        android:id="@+id/draws"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/table_draw_column_title"
        android:textSize="@dimen/table_teams_text_size" />

    <TextView
        android:id="@+id/loses"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/table_lost_column_title"
        android:textSize="@dimen/table_teams_text_size" />

    <TextView
        android:id="@+id/goals"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:gravity="center"
        android:text="@string/table_goals_column_title"
        android:textSize="@dimen/table_teams_text_size" />

    <TextView
        android:id="@+id/points"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/table_points_column_title"
        android:textSize="@dimen/table_teams_text_size" />
</LinearLayout>